Update: MONGO_URI

--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -7,7 +7,7 @@ on:
       - 'feature/*'
 
 env:
-  MONGOURI: 'mongodb+srv://demo-db.kknfcly.mongodb.net/demo-db'
+  MONGO_URI: 'mongodb+srv://demo-db.kknfcly.mongodb.net/demo-db'
   MONGO_USERNAME: ${{ vars.MONGO_USERNAME }}
   MONGO_PASSWORD: ${{ secrets.MONGO_PASSWORD }}
     
