--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -52,6 +52,7 @@ jobs:
           run: npm install
 
         - name: Run Code Coverage
+          continue-on-error: true
           run: npm run coverage
 
         - name: Archive Test Results
