--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -24,6 +24,12 @@ jobs:
           with:
             node-version: 20
     
+        - name: Cache node modules
+          uses: actions/checkout@v4
+          with:
+            path: node_modules
+            key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+
         - name: Install Dependencies
           run: npm install
     
@@ -47,6 +53,12 @@ jobs:
           uses: actions/setup-node@v4
           with: 
             node-version: 18
+        
+        - name: Cache node modules
+          uses: actions/checkout@v4
+          with:
+            path: node_modules
+            key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
         
         - name: Install Dependencies
           run: npm install
