--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -28,7 +28,7 @@ jobs:
           uses: actions/checkout@v4
           with:
             path: node_modules
-            key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+            key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
 
         - name: Install Dependencies
           run: npm install
@@ -58,7 +58,7 @@ jobs:
           uses: actions/checkout@v4
           with:
             path: node_modules
-            key: ${{ runner.os }}-${{ hashFiles('package-lock.json') }}
+            key: ${{ runner.os }}-npm-${{ hashFiles('package-lock.json') }}
         
         - name: Install Dependencies
           run: npm install
