--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -25,7 +25,7 @@ jobs:
             node-version: 20
     
         - name: Cache node modules
-          uses: actions/checkout@v4
+          uses: actions/cache@v4
           with:
             path: node_modules
             key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
@@ -55,7 +55,7 @@ jobs:
             node-version: 18
         
         - name: Cache node modules
-          uses: actions/checkout@v4
+          uses: actions/cache@v4
           with:
             path: node_modules
             key: ${{ runner.os }}-node-modules-${{ hashFiles('package-lock.json') }}
