--- a/.github/workflows/solar-system.yml
+++ b/.github/workflows/solar-system.yml
@@ -75,10 +75,13 @@ jobs:
             retention-days: 5
           
     containerization:
-          name: dockerlogin
+          name: Containerization
           runs-on: ubuntu-latest
           needs: [unit-testing, code-coverage]
           steps:
+          - name: Checkout Repository
+            uses: actions/checkout@v4
+
           - name: Login to Docker Hub
             uses: docker/login-action@v3
             with:
